20191030 進階功能實作

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".feature_talk.SortActivity"
-            android:theme="@style/AppDialogTheme"
-            ></activity>
-        <activity android:name=".feature_talk.ModifyMessageActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".feature_talk.search.SearchActivity"></activity>
+        <activity
+            android:name=".feature_talk.SortActivity"
+            android:theme="@style/AppDialogTheme" />
+        <activity
+            android:name=".feature_talk.ModifyMessageActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
